fix: audit corrections and add explanatory comments to all language samples
Fixes 14 bugs found via official doc audits (Python math.log, Rust format
strings, Java List.of(null), JS memoization, Ruby class-in-method, PHP
nullsafe, C# raw string interpolation, Elixir stray paren). Adds WHY
comments explaining syntax decisions and language-specific idioms across
all 16 fundamentals files.